--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "db:test": "tsx test-db.ts"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
+    "@vercel/node": "^3.0.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
