fix(vercel): adiciona rewrites para SPA routing
- Corrige erro 404 em /admin/dashboard

- Redireciona todas as rotas nao-API para index.html

- Mantem serverless functions /api/* funcionando

--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,11 @@
   "version": 2,
   "buildCommand": "pnpm run vercel-build",
   "outputDirectory": "dist",
-  "framework": "vite"
+  "framework": "vite",
+  "rewrites": [
+    {
+      "source": "/((?!api/).*)",
+      "destination": "/index.html"
+    }
+  ]
 }
