refactor(api): consolida endpoints e corrige tipos TS para limite Vercel Hobby
- Adiciona @types/node e configura tsconfig.json (ES2022, Bundler)

- Cria src/lib/env.ts para variaveis de ambiente centralizadas

- Consolida 9 endpoints publish em api/admin/publish.ts unico

- Cria rotas genericas [resource].ts e [resource]/[id].ts

- Remove 12 arquivos serverless individuais

- Atualiza frontend para usar endpoint consolidado

- Corrige api/health.ts sem process.uptime()

- Total: 9 serverless functions (limite 12 OK)

- Build sem erros TS2591

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,14 @@
       "@/*": ["./src/*"]
     },
     "jsx": "react-jsx",
-    "types": ["vite/client"],
+    "types": ["node", "vite/client"],
     "noImplicitAny": false,
     "noUnusedParameters": false,
     "skipLibCheck": true,
     "allowJs": true,
     "noUnusedLocals": false,
-    "strictNullChecks": false
+    "strictNullChecks": false,
+    "moduleResolution": "Bundler",
+    "target": "ES2022"
   }
 }
