--- a/apps/api/vercel.json
+++ b/apps/api/vercel.json
@@ -1,18 +1,6 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "src/index.ts",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "src/index.ts"
-    }
-  ],
-  "env": {
-    "NODE_ENV": "production"
-  }
+  "buildCommand": "pnpm run vercel-build",
+  "outputDirectory": "dist",
+  "framework": "vite"
 }
