--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,15 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "target": "ES2020",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "jsx": "react-jsx",
     "types": ["node"],
-    "strict": true,
     "skipLibCheck": true,
     "allowJs": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
     "noImplicitAny": false,
     "noUnusedParameters": false,
     "noUnusedLocals": false,
