fix: Node 20.x runtime e validacao de env vars
- Definir Node 20.x em package.json engines

- Configurar runtime nodejs20.x em vercel.json

- Atualizar api/tsconfig.json para NodeNext

- Adicionar fallback SUPABASE_SERVICE_ROLE nas env vars

- Adicionar nodeVersion no endpoint /api/diag

- Validar imports relativos (sem @/)

--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,10 @@
   "framework": "vite",
   "functions": {
     "api/**/*.ts": {
-      "runtime": "@vercel/node@3.2.0"
+      "runtime": "nodejs20.x"
+    },
+    "api/**/*.js": {
+      "runtime": "nodejs20.x"
     }
   },
   "rewrites": [
