--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,3 @@
 {
-  "version": 2,
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    },
-    "api/**/*.js": {
-      "runtime": "nodejs20.x"
-    }
-  }
+  "$schema": "https://openapi.vercel.sh/vercel.json"
 }
