--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@
 # API Base URL (opcional em dev - usa proxy /api por padrão)
 # Descomente apenas se quiser chamar a API diretamente sem proxy
 # VITE_API_URL=http://localhost:8080
+
+# Supabase Configuration (Backend)
+# Estas variáveis são necessárias nas Serverless Functions (Vercel)
+SUPABASE_URL=
+SUPABASE_ANON_KEY=
+SUPABASE_SERVICE_ROLE=
+SUPABASE_BUCKET=recanto-moriah
