--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
+    "busboy": "^1.6.0",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
@@ -80,6 +81,7 @@
     "@eslint/js": "^9.32.0",
     "@tailwindcss/typography": "^0.5.16",
     "@vercel/node": "^3.0.0",
+    "@types/busboy": "^1.5.4",
     "@types/node": "^22.16.5",
     "@types/pg": "^8.15.5",
     "@types/react": "^18.3.23",
