--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
+  "version": 2,
   "functions": {
-    "api/**/*.ts": { "runtime": "nodejs20.x" },
-    "api/**/*.js": { "runtime": "nodejs20.x" }
+    "api/**/*.{ts,js}": { "runtime": "nodejs20.x" }
   },
   "rewrites": [
     { "source": "/api/:match*", "destination": "/api/:match*" },
